✅ tests: Add @ExtendWith(ApplicationExtension.class) to enable JavaFX thread in tests for stable UI property handling